[tool.poetry]
name = "vocabirt"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.8"
torchtext = "^0.9.0"
transformers = "^4.3.2"
nltk = "^3.5"
torch = "1.8.0"
pandas = "^1.1.5"
click = "^7.1.2"
pyarrow = "^1.0.0"
scikit-learn = "^0.24.1"
statsmodels = "^0.12.0"
mord = "^0.6"
more-itertools = "^8.6.0"
matplotlib = "^3.3.3"
hvplot = "^0.7.0"
click-log = "^0.3.2"
snakemake = "^5.32.0"
gensim = "^3.8.3"
wordfreq = "^2.4.2"
loky = "^2.9.0"
pytorch-lightning = { git = "https://github.com/PyTorchLightning/pytorch-lightning.git", tag = "d0596fac94665714d9505148fcdfa2c7e2c7ed20", optional = true }
wheel = "^0.36.2"
duckdb = "^0.2.7"
zarr = "^2.7.0"
torchmetrics = {git = "https://github.com/PyTorchLightning/metrics.git", optional = true}
cachetools = "^4.2.1"
datashader = "^0.12.1"
seaborn = "^0.11.1"
semopy = "^2.1.4"
pycountry = "^20.7.3"
arviz = "^0.11.2"
cmdstanpy = "^0.9.75"
py-irt = "^0.1.1"
catsim = "^0.15.6"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = "19.10b0"
mypy = "^0.800"
flake8 = "^3.8.4"
isort = "^5.7.0"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel>=0.26"]
build-backend = "poetry.masonry.api"
