[tool.poetry]
name = "vocabirt"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.8"
torchtext = "^0.9.0"
torch = "1.8.0"
pandas = "^1.1.5"
click = "^7.1.2"
pyarrow = "^5.0.0"
scikit-learn = "^0.24.1"
more-itertools = "^8.6.0"
matplotlib = "^3.3.3"
hvplot = "^0.7.0"
snakemake = "^5.32.0"
gensim = "^3.8.3"
wordfreq = "^2.4.2"
loky = "^2.9.0"
pytorch-lightning = "^1.4.2"
wheel = "^0.36.2"
duckdb = "^0.2.7"
zarr = "^2.7.0"
torchmetrics = "^0.5.0"
cachetools = "^4.2.1"
seaborn = "^0.11.1"
pycountry = "^20.7.3"
arviz = "^0.11.2"
cmdstanpy = "^0.9.75"
catsim = "^0.15.6"
selenium = "^3.141.0"
matplotlib-label-lines = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "19.10b0"
mypy = "^0.800"
flake8 = "^3.8.4"
isort = "^5.7.0"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel>=0.26"]
build-backend = "poetry.masonry.api"
